Pushing readme and html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
     margin: 0;
 }
 
-/* Styling to set the background of the website to a defined colour */
+/* Styling to set background of the website to a defined colour */
 
 body {
     background-color: #d9dcd6;
